# LLM-Cost-IQ

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 0001_analyses.sql  0001_init.sql
script/: analyze_integration.rs  test_phase1.sh
src/: auth.rs  db.rs  main.rs
src/auth/: middleware.rs
src/handlers/: analyze.rs  auth.rs  dashboard.rs  history.rs
src/model/: analysis.rs
src/services/: estimator.rs
tests/: analyze_test.rs  auth_test.rs  db_test.rs  estimator_test.rs  health_tests.rs  integration_estimator.rs
