// Cargo.toml
[package]
name = "llm-cost-iq-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
anyhow = "1"
thiserror = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = "0.4"
tiktoken-rs = "0.5" 

[dev-dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
tokio = { version = "1", features = ["full"] }

b
